# Capslock

./: .env.example  .gitignore  Dockerfile  README.md  TASK.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
docs/: DESIGN.md
evals/: gold.json  run.py
fixtures/: NOTES.md  search_index.json
fixtures/articles/: art_001.html  art_002.html  art_003.html  art_004.html  art_005.html  art_006.html  art_007.html  art_008.html  art_009.html  art_010.html  art_011.html  art_012.html  art_013.html  art_014.html  art_015.html  art_016.html  art_017.html  art_018.html  art_019.html  art_020.html
fixtures/feeds/: ai_news.xml  industry_digest.xml
tests/: conftest.py  test_agent_helpers.py  test_agent_pipeline.py  test_token_usage.py  test_tools.py
tracker/: __init__.py  __main__.py  agent.py  api.py  config.py  main.py  schemas.py  token_usage.py  tool_description.py  tools.py
